--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Public Service Charter - Home</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        nav {
+            display: flex;
+            flex-wrap: nowrap;
+            justify-content: space-around;
+            padding: 10px;
+            background-color: #00FF00;
+        }
+        nav a {
+            flex: 1;
+            margin: 1px;
+            padding: 10px 20px;
+            text-decoration: none;
+            color: white;
+            border-radius: 10px;
+            box-shadow: 0 4px #FF0000;
+            transition: transform 0.1s, box-shadow 0.1s;
+            text-align: center;
+            white-space: nowrap;
+        }
+        nav a:active {
+            box-shadow: 0 2px #2196F3;
+            transform: translateY(2px);
+        }
+        #home { background-color: #FFA500; }
+        #introduction { background-color: #2196F3; }
+        #saving { background-color: #8B0000; }
+        #loan { background-color: #673ab7; }
+        #services { background-color: #009688; }
+        #notice { background-color: #0000CD; }
+        #shop { background-color: #3f51b5; }
+        #gallery { background-color: #795548; }
+        #charter { background-color: #9c27b0; }
+        #contact { background-color: #006400; }
+        
+        /* Animation for logo */
+        @keyframes rotate {
+            0% {
+                transform: rotateY(0);
+            }
+            100% {
+                transform: rotateY(360deg);
+            }
+        }
+
+        .logo {
+            animation: rotate 10s linear infinite;
+        }
+    </style>
 </head>
 <body>
     <header>
     <h1 style="color: red; background-color: white; text-align: center; font-size: 24px;">
-    <img src="https://i.ibb.co/K0qpc3R/Coop-Logo-New1.jpg" alt="Coop-Logo-New1" border="0" style="float: left; margin-right: 10px;">
+   <img src="https://i.ibb.co/K0qpc3R/Coop-Logo-New1.jpg" alt="Coop-Logo-New1" border="0" class="logo" style="float: left; margin-right: 10px;">
+
     श्री नमुना कृषक बहुमुखी सहकारी संस्था लि.,मनहरी गाउँपालिका -३,गैरिचोक,मकवानपुर<br>स्थापना २०५५/१२/२२ <br> सम्पर्क 
 </h1>
         <marquee behavior="scroll" direction="left" scrollamount="5">
@@ -21,7 +71,8 @@
     </nav>
     <main>
         <section>
-            <h2>सिस्टम निर्माण </h2>
+            <h2>सिस्टम निर्माण </h2><img src="https://i.ibb.co/rtR1Cdx/image-150x150.png" border="0" class="logo" style="float: left; margin-right: 10px;">
+
              <p style="color: red; text-align: justify;">
 
 
@@ -30,7 +81,7 @@
 सम्पर्क नम्बर : ९८५५०७२९३०,९८४५१०६९३० <br>
 इमेल : aryalsunil026@gmail.com <br>
 ब्लग : https://smartkhabarp3.blogspot.com/<br>
-WhatsApp : 9855072930<br><br>मेरो अन्य थप एप्लिकेसनहरु <br>
+WhatsApp : 9855072930<br><br><br>मेरो अन्य थप एप्लिकेसनहरु <br>
 •	Online Result Management System <br>
 •	Inventory Management System <br>
 •	Co-Operative Account Management System With Char Khata <br>
