--- a/contact.html
+++ b/contact.html
@@ -67,6 +67,72 @@
         .light-dim {
             animation: lightDim 2s infinite;
         }
+
+        /* 5D pattern background */
+        section {
+            position: relative;
+            padding: 20px; /* Add padding for better visual appearance */
+            margin-top: 20px; /* Optional: Adjust margin to separate from h2 */
+            overflow: hidden;
+            background: linear-gradient(45deg, #FFD700, #FF1493, #00BFFF, #32CD32, #FF6347);
+            background-size: 400% 400%;
+            animation: gradientAnimation 15s ease infinite, floatAnimation 20s linear infinite;
+        }
+
+        @keyframes gradientAnimation {
+            0% {
+                background-position: 0% 50%;
+            }
+            50% {
+                background-position: 100% 50%;
+            }
+            100% {
+                background-position: 0% 50%;
+            }
+        }
+
+        @keyframes floatAnimation {
+            0% {
+                transform: translateY(0);
+            }
+            50% {
+                transform: translateY(-10px);
+            }
+            100% {
+                transform: translateY(0);
+            }
+        }
+
+        /* Flying butterfly and balloon */
+        .flying-object {
+            position: absolute;
+            top: -50px;
+            animation: floatObject 20s linear infinite;
+        }
+
+        @keyframes floatObject {
+            0% {
+                transform: translateX(0);
+            }
+            50% {
+                transform: translateX(100%);
+            }
+            100% {
+                transform: translateX(0);
+            }
+        }
+
+        .butterfly {
+            width: 50px;
+            height: auto;
+            left: -50px; /* Adjust position as needed */
+        }
+
+        .balloon {
+            width: 30px;
+            height: auto;
+            left: calc(100% + 50px); /* Adjust position as needed */
+        }
     </style>
 </head>
 <body>
@@ -87,7 +153,7 @@
             <h2>सिस्टम निर्माण </h2>
             <img src="https://i.ibb.co/rtR1Cdx/image-150x150.png" border="0" class="light-dim" style="float: left; margin-right: 10px;">
             <p style="color: red; text-align: justify;">
-                नाम : सुनिल कुमार अर्याल <br>
+                <span style="color:blue;">नाम : सुनिल कुमार अर्याल <br>
                 ठेगाना : मनहरी गाउँपालीका वडा नं -३,मकवानपुर <br>
                 सम्पर्क नम्बर : ९८५५०७२९३०,९८४५१०६९३० <br>
                 इमेल : aryalsunil026@gmail.com <br>
@@ -101,8 +167,11 @@
                 • E-Darta/Chalani & E-Hajiri System <br>
                 • Smartkhabarp3 Blog <br>
                 • KBC Quiz Application<br>
-                • Trial Balance Online Practice System
+                • Trial Balance Online Practice System</span>
             </p>
+            <!-- Flying butterfly and balloon -->
+            <img src="https://i.ibb.co/vv10GGy/butterfly.png" class="flying-object butterfly" alt="Butterfly">
+            <img src="https://i.ibb.co/YN4t8tT/balloon.png" class="flying-object balloon" alt="Balloon">
         </section>
     </main>
     <footer>
