--- a/index.html
+++ b/index.html
@@ -127,15 +127,12 @@ font-size: 1em;
     <header>
         <h1 style="color: red; background-color: white; text-align: center; font-size: 24px;">
             <img src="https://i.ibb.co/K0qpc3R/Coop-Logo-New1.jpg" alt="Coop-Logo-New1" border="0" class="logo" style="float: left; margin-right: 10px;">
-            श्री नमुना कृषक बहुमुखी सहकारी संस्था लि.,मनहरी गाउँपालिका -३,गैरिचोक,मकवानपुर&nbsp;&nbsp;&nbsp;&nbsp;<div class="dropdown">
-            <button  style="color: Blue;font-size:0.7em; padding: 2.5px 6px;
-            background-color: yellow; border: none;
-            border-radius: 10px;
-            box-shadow: 0 5px red;
-            font-size: 1.2 em;
-            cursor: pointer;
-            transition: all 0.1s ease-in-out;
-            text-align: center;">Play Radio</button>
+            श्री नमुना कृषक बहुमुखी सहकारी संस्था लि.,मनहरी गाउँपालिका -३,गैरिचोक,मकवानपुर &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="dropdown">
+
+    <img src="https://i.ibb.co/MGHFJpd/bg.png" alt="Play Radio" style="vertical-align: middle; margin-left: 5px; width: 100px; height: 40px;">
+ 
+
+
             <div class="dropdown-content">
                 <a href="#" onclick="toggleFMPlayer('https://streaming.softnep.net:10984/;stream.nsv&amp;type=mp3')">Radio Thahasanchar</a>
                 <a href="#" onclick="toggleFMPlayer('https://usa15.fastcast4u.com/proxy/hitsfm912?mp=/1')">Hits FM</a>
