--- a/suchana.html
+++ b/suchana.html
@@ -3,67 +3,128 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>नेपाली हिन्दूहरुको विशेष पर्व शुभ दिपावली २०८१ को सुखद् उपलक्ष्यमा हाम्रा सम्पूर्ण शेयर सदस्यहरूमा सुख, शान्ति, समृद्धि, सुस्वास्थ्य एवं दीर्घायुको हार्दिक मंगलमय शुभकामना व्यक्त गर्दछौ</title>
+    <title>6 Column, 50 Row Table</title>
     <style>
         body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            height: 100vh;
-            margin: 0;
-            background-color: #2c3e50; /* Dark background */
-            color: #ffcc00; /* Golden color */
-            font-family: 'Arial', sans-serif;
-            text-align: center;
-            position: relative;
-            overflow: hidden;
+            color: red;
         }
-
-        h1 {
-            font-size: 3em;
-            text-shadow: 0 0 10px #ffcc00, 0 0 20px #ffffff; /* Glowing effect */
-            margin-bottom: 20px;
-        }
-
-        .container {
-            position: relative;
-        }
-
-        .fireworks {
-            position: absolute;
-            top: 0;
-            left: 0;
+        table {
             width: 100%;
-            height: 100%;
-            background-image: url('https://bestanimations.com/media/fireworks/671801409ba-awesome-coloful-fireworks-animated-gif-image-3.gif.pagespeed.ce.mpwDrZ7FKR.gif');
-            background-size: cover;
-            opacity: 0.5; /* Semi-transparent background */
-            z-index: -1; /* Behind other content */
+            border-collapse: collapse;
+        }
+        th, td {
+            border: 1px solid #000;
+            padding: 8px;
+            text-align: left;
+        }
+        th {
+            background-color: yellow;
+        }
+        .marquee-container {
+            height: 550px; /* Set a fixed height for the container */
+            overflow: hidden; /* Hide the overflow content */
+            position: relative; /* Set position relative for the container */
+        }
+        .marquee-content {
+            animation: marquee-up 60s linear infinite; /* Use keyframe animation for upward scrolling */
+            position: absolute; /* Position absolute for scrolling content */
+            bottom: -10%; /* Start the marquee from the bottom */
+            width: 100%;
+        }
+        @keyframes marquee-up {
+            0% {
+                transform: translateY(100%); /* Start from below the container */
+            }
+            100% {
+                transform: translateY(-100%); /* Scroll up to above the container */
+            }
+        }
+        .fixed-header {
+            position: sticky; /* Position sticky for the fixed header */
+            top: 0;
+            background-color: white; /* Background color to match the page */
+            z-index: 1;
+        }
+        /* Adjusting column widths */
+        th:nth-child(1),
+        td:nth-child(1) {
+            width: 5%; /* Set the width of the first column */
+        }
+        th:nth-child(2),
+        td:nth-child(2) {
+            width: 15%; /* Set the width of the second column */
+        }
+        th:nth-child(3),
+        td:nth-child(3) {
+            width: 45%; /* Set the width of the third column */
+        }
+        th:nth-child(4),
+        td:nth-child(4) {
+            width: 11%; /* Set the width of the fourth column */
+        }
+        th:nth-child(5),
+        td:nth-child(5) {
+            width: 12%; /* Set the width of the fifth column */
+        }
+        th:nth-child(6),
+        td:nth-child(6) {
+            width: 12%; /* Set the width of the sixth column */
         }
 
-        .diya {
-            display: inline-block;
-            width: 100px;
-            height: 100px;
-            background: url('https://example.com/path-to-your-diya-image.png') no-repeat center / cover; /* Replace with your diya image */
-            animation: flicker 1.5s infinite alternate;
+        @keyframes blink {
+            0% { color: green; }
+            50% { color: red; }
+            100% { color: green; }
         }
-
-        @keyframes flicker {
-            0% { transform: scale(1); }
-            100% { transform: scale(1.05); }
+        .blinking-marquee {
+            animation: blink 1s infinite;
+            font-size: 20px; /* Increase font size if needed */
+            text-align: justify; /* Center the text */
         }
     </style>
 </head>
 <body>
-    <audio id="firecrackerSound" src="https://example.com/path-to-your-firecracker-sound.mp3" loop autoplay></audio> <!-- Replace with your firecracker sound file URL -->
-    <audio id="bombSound" src="https://example.com/path-to-your-bomb-sound.mp3" loop autoplay></audio> <!-- Replace with your bomb sound file URL -->
-    <div class="fireworks"></div>
-    <h1>नेपाली हिन्दूहरुको विशेष पर्व शुभ दिपावली २०८१ को सुखद् उपलक्ष्यमा हाम्रा सम्पूर्ण शेयर सदस्यहरूमा सुख, शान्ति, समृद्धि, सुस्वास्थ्य एवं दीर्घायुको हार्दिक मंगलमय शुभकामना व्यक्त गर्दछौ</h1>
-    <div class="container">
-        <div class="diya"></div>
-        <p>श्री नमुना कृषक बहुमुखी सहकारी संस्था लि.,मनहरी गाउँपालिका -३,मकवानपुर</p>
-    </div>
+
+<h1 style="color: red; background-color: white; text-align: center; font-size: 24px;">
+    <img src="https://i.ibb.co/K0qpc3R/Coop-Logo-New1.jpg" alt="Coop-Logo-New1" border="0" style="float: left; margin-right: 10px;">
+    श्री नमुना कृषक बहुमुखी सहकारी संस्था लि.,मनहरी गाउँपालिका -३,गैरिचोक,मकवानपुर<br>स्थापना २०५५/१२/२२ <br> सुचना ! 
+  सुचना !! सुचना !!!
+</h1>
+<marquee style="color: blue;">
+    २७औं वार्षिक साधारण सभा सम्बन्धि अत्यन्त जरुरि सूचना 
+</marquee>
+<nav>
+    <!-- Navigation links can be added here -->
+</nav>
+<main>
+    <section>
+        <h3 style="text-align:justify;">
+            <div class="blinking-marquee">
+             प्रस्तुत सम्वन्धमा यस संस्थाको मिति २०८१।०८।२९ गते बसेको संचालक समितिको बैठक निर्णयानुसार संस्थाको २७औं वार्षिक साधारण सभा तपशिल अनुसारको मिति,स्थान र समयमा संचालन गरिने भएको हुँदा  उक्त सभामा गरिमामय उपस्थितिका लागि यस संस्थाका सम्पुर्ण शेयर सदस्यहरुलाई अनुरोध गरीन्छ ।<br>
+             ... (rest of the content) ...
+            </div>
+        </h3>
+    </section>
+    <section>
+        <div id="fb-root"></div>
+        <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v11.0"></script>
+        <div class="fb-like" data-href="https://namunacoop.github.io/namunafmc/suchana.html" data-width="" data-layout="standard" data-action="like" data-size="small" data-share="true"></div>
+    </section>
+</main>
+
+<!-- Add Audio Section -->
+<section>
+    <h3>Listen to Announcement</h3>
+    <!-- Added autoplay attribute -->
+    <audio controls autoplay>
+        <source src="https://drive.google.com/file/d/16dHXjygLQ13pGmZSHvw-lL_En90L5NGV/view?usp=sharing" type="audio/mp3">
+        Your browser does not support the audio element.
+    </audio>
+</section>
+
+<footer>
+    <p>&copy; 2024 Shree Namuaa Farmer Multiple Co-operative Ltd. All rights reserved.</p>
+</footer>
+<script src="scripts.js"></script>
 </body>
 </html>
