--- a/suchana.html
+++ b/suchana.html
@@ -103,7 +103,22 @@
     <section>
         <h3 style="text-align:justify;">
             <div class="blinking-marquee">
-             प्रस्तुत सम्वन्धमा यस संस्थाको मिति २०८१।०८।२९ गते बसेको संचालक समितिको बैठक निर्णयानुसार संस्थाको २७औं वार्षिक साधारण सभा तपशिल अनुसारको मिति,स्थान र समयमा संचालन गरिने भएको हुँदा  उक्त सभामा गरिमामय उपस्थितिका लागि यस संस्थाका सम्पुर्ण शेयर सदस्यहरुलाई अनुरोध गरीन्छ । 
+             प्रस्तुत सम्वन्धमा यस संस्थाको मिति २०८१।०८।२९ गते बसेको संचालक समितिको बैठक निर्णयानुसार संस्थाको २७औं वार्षिक साधारण सभा तपशिल अनुसारको मिति,स्थान र समयमा संचालन गरिने भएको हुँदा  उक्त सभामा गरिमामय उपस्थितिका लागि यस संस्थाका सम्पुर्ण शेयर सदस्यहरुलाई अनुरोध गरीन्छ । सभाको लागि सम्पुर्ण शेयर सदस्यहरुलाई पत्र पठाइएको छ कारणवस पत्र हात नपरेमा यसै सुचनालाई आधार मानेर उपस्थित हुन सबै शेयर सदस्य ज्युहरुमा अनुरोध गर्दछु । <br>
+साधारण सभाका विषयहरु :<br>
+•	संचालक समितिको तर्फवाट अध्यक्ष ज्युको प्रतिवेदन सम्वन्धमा ।<br>
+•	लेखा सु.समितिको तर्फवाट लेखा संयोजकको प्रतिवेदन सम्वन्धमा ।<br>
+•	उपसमितिको प्रतिवेदन सम्वन्धमा ।<br>
+•	आ.व. २०८०/०८१ को लेखा परिक्षण प्रतिवेदन सम्वन्धमा ।<br>
+•	आ.व. २०८१/०८२ को प्रस्तावित बजेट तथा कार्यक्रम सम्वन्धमा ।<br>
+•	आ.व. २०८१/०८२ को लागि लेखा परिक्षकको नियुक्ति र निजको पारिश्रमिक निर्धारण सम्वन्धमा ।<br>
+•	साधारण सभाको निर्णय पुस्तिका प्रमाणित गर्ने सम्वन्धमा ।<br>
+•	बिधान संसोधन तथा  पुनर्लेखन सम्बन्धमा ।<br>
+•	कार्यविधिहरु  निर्माण सम्बन्धमा ।<br>
+•	विविध ।<br>
+	तपशिल : <br>
+	मिति  : २०८१।०९।२० गते ।       <br>
+	स्थान  :  सहकारीको आफ्नै भवन मनहरी –३,गैरिचोक ।     <br>                                                              
+	 समय  : विहान ११:०० वजे ।   
             </div>
         </h3>
     </section>
